--- a/chimm.html
+++ b/chimm.html
@@ -13,15 +13,15 @@
     <p>Ela é  uma coelha anã branca usando um chapéu de <strong>bobo da corte</strong> preto com uma caveira rosa estampada (que mexe os olhos dela) e um rabo de "diabinho" preto no lugar de
     um rabo de coelho normal.</p>
     <img src="download (1).jpeg">
-<p> A aparência de Kuromi também se parece com muitos dos personagens clrássicos de desenhos animados das décadas de 1920 e 1930.</p>
-<p> Ela tem uma personalidade rebelde e gosta de parecer <strong>durona</strong>, mas de fato esconde um lado <strong>sensível</strong>.</p>
+<p class="uva"> A aparência de Kuromi também se parece com muitos dos personagens clrássicos de desenhos animados das décadas de 1920 e 1930.</p>
+<p class"uva"> Ela tem uma personalidade rebelde e gosta de parecer <strong>durona</strong>, mas de fato esconde um lado <strong>sensível</strong>.</p>
 
 
 <h2>HELLO KITTY</h2>
-<p> <strong>Hello Kitty</strong> vendeu bem imediatamente após o lançamento de 1974, e as vendas da <strong>Sanrio</strong> aumentaram sete vezes até cair temporariamente em 1978. Novas séries com <strong>Hello Kitty</strong> em designs temáticos diferentes são lançadas regularmente, seguindo as tendências atuais. 
+<p class="batata"> <strong>Hello Kitty</strong> vendeu bem imediatamente após o lançamento de 1974, e as vendas da <strong>Sanrio</strong> aumentaram sete vezes até cair temporariamente em 1978. Novas séries com <strong>Hello Kitty</strong> em designs temáticos diferentes são lançadas regularmente, seguindo as tendências atuais. 
     <strong>Yuko Yamaguchi</strong>, a principal designer da maior parte da história da Hello Kitty, disse que moda, filmes e TV a inspiram na criação de novos designs.</p>
 
-    <p>Hello Kitty foi originalmente comercializado apenas para um público infantil e pré-adolescente. Na década de 1990, o mercado-alvo da Hello Kitty foi ampliado para incluir adolescentes e adultos como uma marca retrô.
+    <p class="batata">Hello Kitty foi originalmente comercializado apenas para um público infantil e pré-adolescente. Na década de 1990, o mercado-alvo da Hello Kitty foi ampliado para incluir adolescentes e adultos como uma marca retrô.
 Comercializado para aqueles que não podiam obter mercadorias da Hello Kitty quando crianças, ou que lembram com carinho dos itens que possuíam, a Sanrio começou a vender produtos da marca Hello Kitty, como bolsas e laptops. A série Face 1994-1996 foi a primeira a ser projetada para um apelo mais maduro.
     
     De acordo com a <strong>Sanrio</strong>, em 1999, a <strong>Hello Kitty</strong> apareceu em <strong>12.000</strong> produtos diferentes anualmente. Em 2008, a <strong>Hello Kitty</strong> era responsável por metade da receita líquida de <strong>$ 1 bilhão da Sanrio</strong>, e havia mais de <strong>50.000</strong> produtos diferentes da marca Hello Kitty em mais de <strong>60 países</strong>. Começando em 2007, seguindo as tendências no Japão, a Sanrio começou a usar designs mais escuros para a Hello Kitty com mais preto e menos rosa, se afastando dos estilos kawaii.
