--- a/chimm.html
+++ b/chimm.html
@@ -14,7 +14,7 @@
     um rabo de coelho normal.</p>
     <img src="download (1).jpeg">
 <p class="uva"> A aparência de Kuromi também se parece com muitos dos personagens clrássicos de desenhos animados das décadas de 1920 e 1930.</p>
-<p class"uva"> Ela tem uma personalidade rebelde e gosta de parecer <strong>durona</strong>, mas de fato esconde um lado <strong>sensível</strong>.</p>
+<p class="uva"> Ela tem uma personalidade rebelde e gosta de parecer <strong>durona</strong>, mas de fato esconde um lado <strong>sensível</strong>.</p>
 
 
 <h2>HELLO KITTY</h2>
