--- a/chimm.html
+++ b/chimm.html
@@ -12,7 +12,7 @@
   <p><strong>Kuromi</strong> - é a rival de My Melody originada do anime <strong>Onegai My Melody</strong> onde é a vilã. 
     <p>Ela é  uma coelha anã branca usando um chapéu de <strong>bobo da corte</strong> preto com uma caveira rosa estampada (que mexe os olhos dela) e um rabo de "diabinho" preto no lugar de
     um rabo de coelho normal.</p>
-    <img src="download (1).jpeg">
+    <img src="Kuromi-1-.webp">
 <p class="uva"> A aparência de Kuromi também se parece com muitos dos personagens clrássicos de desenhos animados das décadas de 1920 e 1930.</p>
 <p class="uva"> Ela tem uma personalidade rebelde e gosta de parecer <strong>durona</strong>, mas de fato esconde um lado <strong>sensível</strong>.</p>
 
@@ -31,7 +31,7 @@ Comercializado para aqueles que não podiam obter mercadorias da Hello Kitty qua
     Em 1º de janeiro de 2020, a Sanrio Hello Kitty Town em Iskandar Puteri, Malásia fechou definitivamente devido à falta de visitantes. Em 21 de fevereiro de 2020, o parque temático Sanrio Puroland em Tóquio foi fechado temporariamente devido à pandemia COVID-19.[22]
     
     Em junho de 2020, a Sanrio divulgou uma declaração de que seu fundador, Shintaro Tsuji, de 92 anos, se aposentaria como presidente-executivo da Sanrio no dia 1º de julho, e seu neto, Tomokuni Tsuji, de 31 anos, assumiria o cargo.</p>
-<img src="images.jpeg">
+<img src="">
         
 </body>
 </html>
